Add support for `@Mixin.value` as an alternative to `@Mixin.targets` with improved handling of class literals